Add Lombok to entities, hash-based duplicate check for files, config-based upload dir, Path-based file storage